# rewol

./: .gitignore  Dockerfile.rewolproxy  Dockerfile.rewolserver  Makefile  README.md  pyproject.toml
rewolproxy/: PROMPT.md  __init__.py  config.sample.yaml  pyproject.toml  rewolproxy.py  rewolproxy.sample.service
rewolproxy/tests/: test_config.py  test_integration.py  test_metrics.py  test_password.py
rewolserver/: PROMPT.md  __init__.py  config.sample.yaml  generatepwdandsalt.py  rewol.py  test_monitor_interval.py  test_retry_logic.py
rewolserver/templates/: start.html  status.html  stop.html
rewolserver/tests/: __init__.py  demo_background_monitoring.py  test_background_monitor.py  test_monitor_interval.py  test_monitoring.py  test_monitoring_simple.py  test_retry_simple.py  test_simple.py
