[project]
name = "rewolproxy"
version = "0.1.0"
description = "Remote proxy server for Wake-on-LAN functionality"
authors = [
    {name = "Roberto", email = "piva.roberto.88@gmail.com"}
]
dependencies = [
    "wakeonlan>=3.0.0",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0",
]

[project.scripts]
rewolproxy = "rewolproxy:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]